--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -197,7 +197,7 @@ body {
 	height: 40px;
 }
 
-.proposal-card__fornecedor-title {
+.proposal-card__category-title {
 	font-size: 1.2rem;
 	font-weight: 700;
 	color: #333;
@@ -205,7 +205,7 @@ body {
 	line-height: 1.3;
 }
 
-.proposal-card__fornecedor-name {
+.proposal-card__category-name {
 	font-size: 1.2rem;
 	font-weight: 900;
 	color: #333;
@@ -434,12 +434,15 @@ body {
 	backdrop-filter: blur(5px);
 }
 
+.modal__container {
+	width: 100%;
+	max-width: 500px;
+}
+
 .modal__content {
 	position: relative;
 	background: white;
 	border-radius: 20px;
-	width: 100%;
-	max-width: 500px;
 	box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
 	overflow: hidden;
 	animation: modalSlideIn 0.3s ease-out;
